# oceaninnatable

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: general-issue.md
.github/workflows/: ci.yml  style_test.yml  unit_test.yml
src/ocean_inna_table/: creature.py  main.py  segment.py
